--- a/settings.ini
+++ b/settings.ini
@@ -39,7 +39,7 @@ status = 3
 user = nakamura196
 
 ### Optional ###
-requirements = bs4 requests pandas lxml boto3==1.35.99 python-dotenv
+requirements = bs4 requests pandas lxml boto3==1.35.99 python-dotenv tqdm
 # dev_requirements = 
 # console_scripts =
 # conda_user = 
